CARROT-1020: CLI demo should be executed via the invoker (not ext dirs). Cleaned up dcs.sh too.